tests/parser/bad/type_t-map-cid-cid-lparen-with.scilla
scilla_version 0

library TestLib

let f : Map Uint128 Option (faulty
